--- a/locale/template.txt
+++ b/locale/template.txt
@@ -113,6 +113,18 @@ Error: You don't have the privileg chanelmod or channeladmin to move players fro
 
 Moves a player to <channel> or to self.=
 
+### cmd_status.lua ###
+
+Automatic reconnect=
+IRC-Channel=
+IRC-Chat=
+IRC-Server=
+Topic=
+Tries=
+Worldname/Servername=
+Writes Information about the Chat.=
+max.=
+
 ### cmd_store_channel.lua ###
 
  marks the Channel [=
